--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,9 @@ yarn-error.*
 *.pem
 
 # local env files
-.env*.local
+.env
+.env.*
+!env.example   # <- allow env.example to be tracked
 
 # typescript
 *.tsbuildinfo
