--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "PokemonApp",
-    "slug": "pokemon-app",
+    "slug": "assdev15-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/images/pokemon-logo.png",
@@ -16,7 +16,8 @@
         "foregroundImage": "./src/assets/images/pokemon-logo.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.assdev15.assdev15app"
     },
     "web": {
       "bundler": "metro",
