--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -23,6 +23,16 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
+      # 🔎 Step tambahan untuk cek secret
+      - name: Check if EXPO_TOKEN exists
+        run: |
+          if [ -z "${{ secrets.EXPO_TOKEN }}" ]; then
+            echo "❌ EXPO_TOKEN is NOT set"
+            exit 1
+          else
+            echo "✅ EXPO_TOKEN is set"
+          fi
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
